Remove unnnecessary templates
Remove template parameters where our impl defacto only supports float.
In two cases, this leads to build errors (probably GR bugs), comment
there and leave them as templates.

--- a/blocklib/digitizers/block_demux/block_demux.yml
+++ b/blocklib/digitizers/block_demux/block_demux.yml
@@ -3,12 +3,6 @@ block: block_demux
 label: block_demux
 blocktype: sync_block
 
-typekeys:
-  - id: T
-    type: class
-    options:
-        - rf32
-
 parameters:
 -   id: bit_to_keep
     label: Bit to Keep
@@ -23,7 +17,7 @@ ports:
 -   domain: stream
     id: out
     direction: output
-    type: typekeys/T
+    type: rf32
 
 implementations:
 -   id: cpu
