--- a/blocklib/digitizers/edge_trigger/edge_trigger.yml
+++ b/blocklib/digitizers/edge_trigger/edge_trigger.yml
@@ -3,25 +3,19 @@ block: edge_trigger
 label: edge_trigger
 blocktype: block
 
-typekeys:
-  - id: T
-    type: class
-    options: 
-        - rf32
-
 parameters:
 -   id: samp_rate
     label: Sample Rate
     dtype: rf32
 -   id: lo
     label: Lo
-    dtype: typekeys/T
+    dtype: rf32
 -   id: hi
     label: Hi
-    dtype: typekeys/T
+    dtype: rf32
 -   id: initial_state
     label: Initial State
-    dtype: typekeys/T
+    dtype: rf32
 -   id: send_udp
     label: Send UDP
     dtype: bool
@@ -41,12 +35,12 @@ ports:
 -   domain: stream
     id: in
     direction: input
-    type: typekeys/T
+    type: rf32
 
 -   domain: stream
     id: out
     direction: output
-    type: typekeys/T
+    type: rf32
 
 implementations:
 -   id: cpu
