--- a/blocklib/digitizers/median_and_average/median_and_average.yml
+++ b/blocklib/digitizers/median_and_average/median_and_average.yml
@@ -3,12 +3,6 @@ block: median_and_average
 label: median_and_average
 blocktype: block
 
-typekeys:
-  - id: T
-    type: class
-    options:
-        - rf32
-
 parameters:
 -   id: vec_len
     label: Vector Length
@@ -24,13 +18,13 @@ ports:
 -   domain: stream
     id: in
     direction: input
-    type: typekeys/T
+    type: rf32
     shape: parameters/vec_len
 
 -   domain: stream
     id: out
     direction: output
-    type: typekeys/T
+    type: rf32
     shape: parameters/vec_len
 
 implementations:
