--- a/blocklib/digitizers/post_mortem_sink/post_mortem_sink.yml
+++ b/blocklib/digitizers/post_mortem_sink/post_mortem_sink.yml
@@ -4,11 +4,6 @@ label: post_mortem_sink
 blocktype: sync_block
 includes:
   - gnuradio/digitizers/sink_common.h
-typekeys:
-  - id: T
-    type: class
-    options:
-        - rf32
 
 parameters:
 -   id: name
@@ -42,20 +37,20 @@ ports:
 -   domain: stream
     id: in_data
     direction: input
-    type: typekeys/T
+    type: rf32
 -   domain: stream
     id: in_errors
     direction: input
-    type: typekeys/T
+    type: rf32
     optional: true # TODO(PORT) really optional? io_signature says 2..2, checks for second input
 -   domain: stream
     id: out_data
     direction: output
-    type: typekeys/T
+    type: rf32
 -   domain: stream
     id: out_errors
     direction: output
-    type: typekeys/T
+    type: rf32
     optional: true
 
 implementations:
