--- a/blocklib/digitizers/time_domain_sink/time_domain_sink.yml
+++ b/blocklib/digitizers/time_domain_sink/time_domain_sink.yml
@@ -4,15 +4,14 @@ label: time_domain_sink
 blocktype: sync_block
 includes:
   - gnuradio/digitizers/enums.h
+# TODO(PORT) removing the template parameter leads to an undefined ref. to
+# the pmtf::pmt(time_sink_mode_t) ctor when linking the digitizers lib.
+# Probably a bug in code generation for enums.yml.
 typekeys:
   - id: T
     type: class
     options:
-        - cf32
         - rf32
-        - ri32
-        - ri16
-        - ri8
 parameters:
 -   id: signal_name
     label: Signal Name
