Port stft_goertzl_dynamic_decimated

--- a/blocklib/digitizers/stft_goertzl_dynamic/stft_goertzl_dynamic.yml
+++ b/blocklib/digitizers/stft_goertzl_dynamic/stft_goertzl_dynamic.yml
@@ -7,15 +7,13 @@ parameters:
 -   id: samp_rate
     label: Sample Rate
     dtype: rf64
-    settable: false
+    settable: true
 -   id: winsize
     label: Window Size
     dtype: size
-    settable: false
 -   id: nbins
     label: Number of Bins
     dtype: size
-    settable: false
 
 ports:
 -   domain: stream
