Port block_spectral_peaks

--- a/blocklib/digitizers/peak_detector/peak_detector.yml
+++ b/blocklib/digitizers/peak_detector/peak_detector.yml
@@ -12,7 +12,7 @@ parameters:
     dtype: size
 -   id: proximity
     label: Proximity
-    dtype: int
+    dtype: size
 
 ports:
 -   domain: stream
