Port Picoscope 4000a block
Remove the attempt to make digitizer_block_impl a template with the
hardware specifics in a separate class, it's too intertangled with
the digitizer_block_impl internals right now.

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,3 @@
-
 ###############################################################################
 # If this is an OOT module, the following top level project things are needed
 ###############################################################################
@@ -31,12 +30,21 @@ endif
 py3 = import('python').find_installation('python3')
 json_dep = dependency('nlohmann_json')
 
+enable_picoscope = get_option('enable_picoscope')
+
 if (get_option('enable_testing'))
     TEST_ENV = environment()
-    TEST_ENV.prepend('LD_LIBRARY_PATH', 
+    TEST_ENV.prepend('LD_LIBRARY_PATH',
       join_paths( meson.build_root(),'blocklib','digitizers',get_option('libdir')),
     )
     TEST_ENV.prepend('PYTHONPATH', join_paths(meson.build_root(),'blocklib/digitizers/python'))
+
+    if (enable_picoscope)
+      TEST_ENV.prepend('LD_LIBRARY_PATH',
+        join_paths( meson.build_root(),'blocklib','picoscope4000a',get_option('libdir')),
+      )
+      TEST_ENV.prepend('PYTHONPATH', join_paths(meson.build_root(),'blocklib/picoscope4000a/python'))
+    endif
 endif
 
 prefix = get_option('prefix')
@@ -71,6 +79,18 @@ cppunit_dep = dependency('cppunit')
 libroot_prefix = get_option('libroot_prefix')
 root_dep = dependency('ROOT', method : 'cmake', components : ['MathCore', 'Graf'], modules : ['ROOT::Graf', 'ROOT::MathCore'], cmake_module_path : libroot_prefix + '/cmake')
 
+if enable_picoscope
+  libpicoscope_prefix = get_option('libpicoscope_prefix')
+  libpicoscope_includedir = join_paths(libpicoscope_prefix, 'include')
+  libpicoscope_libdir = join_paths(libpicoscope_prefix, 'lib')
+
+  # TODO(PORT) do at least some basic checks whether these includes/libs exist
+  # HACK: ps4000aApi.h includes PicoCallback.h, whnich is only in libps5000a and libps6000a
+  libpicoscope3000a_dep = declare_dependency(include_directories : join_paths(libpicoscope_includedir, 'libps3000a'), link_args : ['-L' + libpicoscope_libdir, '-lps3000a'])
+  libpicoscope4000a_dep = declare_dependency(include_directories : [join_paths(libpicoscope_includedir, 'libps4000a'), join_paths(libpicoscope_includedir, 'libps6000a')], link_args : ['-L' + libpicoscope_libdir, '-lps4000a'])
+  libpicoscope6000a_dep = declare_dependency(include_directories : join_paths(libpicoscope_includedir, 'libps6000a'), link_args : ['-L' + libpicoscope_libdir, '-lps6000a'])
+endif
+
 if GR_ENABLE_PYTHON
 run_command('python3', join_paths(SCRIPTS_DIR,'gen_meson.py'), 
   join_paths(meson.project_source_root(),'blocklib'), '--enable_python', check: true)
@@ -81,3 +101,6 @@ endif
   
 subdir('blocklib/digitizers')
 
+if enable_picoscope
+  subdir('blocklib/picoscope4000a')
+endif
