--- a/blocklib/digitizers/enums.yml
+++ b/blocklib/digitizers/enums.yml
@@ -14,22 +14,9 @@ digitizer_acquisition_mode_t:
   - id: STREAMING
   - id: RAPID_BLOCK
 
-downsampling_mode_t:
+digitizer_downsampling_mode_t:
   enumerators:
   - id: NONE
   - id: MIN_MAX_AGG
   - id: DECIMATE
   - id: AVERAGE
-
-coupling_t:
-  enumerators:
-  - id: DC_1M # DC, 1MOhm
-  - id: AC_1M # AC, 1 MOhm
-  - id: DC_50R # DC, 50 Ohm
-
-trigger_direction_t:
-  enumerators:
-  - id: RISING
-  - id: FALLING
-  - id: LOW
-  - id: HIGH
