--- a/blocklib/digitizers/simulation_source/simulation_source.yml
+++ b/blocklib/digitizers/simulation_source/simulation_source.yml
@@ -30,14 +30,11 @@ parameters:
     label: Post-Sample Count
     dtype: size
     default: 9000
--   id: auto_arm
-    label: Auto-Arm
-    dtype: bool
-    default: 'false'
--   id: trigger_once
-    label: Trigger once
-    dtype: bool
-    default: 'false'
+-   id: acquisition_mode
+    label: Acquisition Mode
+    dtype: enums/digitizer_acquisition_mode_t
+    is_enum: true
+    default: digitizer_acquisition_mode_t::STREAMING
 -   id: rapid_block_nr_captures
     label: No. of Captures (Rapid Block Mode)
     dtype: size
@@ -46,20 +43,23 @@ parameters:
     label: Polling rate (Streaming Mode)
     dtype: rf64
     default: 0.001
--   id: acquisition_mode
-    label: Acquisition Mode
-    dtype: enums/digitizer_acquisition_mode_t
-    is_enum: true
-    default: digitizer_acquisition_mode_t::STREAMING
 -   id: downsampling_mode
     label: Downsampling Mode
-    dtype: enums/downsampling_mode_t
+    dtype: enums/digitizer_downsampling_mode_t
     is_enum: true
-    default: downsampling_mode_t::NONE
+    default: digitizer_downsampling_mode_t::NONE
 -   id: downsampling_factor
     label: Downsampling Factor
     dtype: size
     default: 1
+-   id: auto_arm
+    label: Auto-Arm
+    dtype: bool
+    default: 'false'
+-   id: trigger_once
+    label: Trigger once
+    dtype: bool
+    default: 'false'
 
 callbacks:
    - id: set_data
