Port PicoScope 6000 block (untested)
Don't have the hardware to test.

--- a/meson.build
+++ b/meson.build
@@ -85,10 +85,11 @@ if enable_picoscope
   libpicoscope_libdir = join_paths(libpicoscope_prefix, 'lib')
 
   # TODO(PORT) do at least some basic checks whether these includes/libs exist
-  # HACK: ps4000aApi.h includes PicoCallback.h, whnich is only in libps5000a and libps6000a
+  # HACK: ps4000aApi.h includes PicoCallback.h, which is only in libps5000a and libps6000a
+  callback_includedir = join_paths(libpicoscope_includedir, 'libps6000a')
   libpicoscope3000a_dep = declare_dependency(include_directories : join_paths(libpicoscope_includedir, 'libps3000a'), link_args : ['-L' + libpicoscope_libdir, '-lps3000a'])
-  libpicoscope4000a_dep = declare_dependency(include_directories : [join_paths(libpicoscope_includedir, 'libps4000a'), join_paths(libpicoscope_includedir, 'libps6000a')], link_args : ['-L' + libpicoscope_libdir, '-lps4000a'])
-  libpicoscope6000a_dep = declare_dependency(include_directories : join_paths(libpicoscope_includedir, 'libps6000a'), link_args : ['-L' + libpicoscope_libdir, '-lps6000a'])
+  libpicoscope4000a_dep = declare_dependency(include_directories : [join_paths(libpicoscope_includedir, 'libps4000a'), callback_includedir], link_args : ['-L' + libpicoscope_libdir, '-lps4000a'])
+  libpicoscope6000_dep = declare_dependency(include_directories : join_paths(libpicoscope_includedir, 'libps6000'), link_args : ['-L' + libpicoscope_libdir, '-lps6000'])
 endif
 
 if GR_ENABLE_PYTHON
@@ -103,4 +104,5 @@ subdir('blocklib/digitizers')
 
 if enable_picoscope
   subdir('blocklib/picoscope4000a')
+  subdir('blocklib/picoscope6000')
 endif
