Actually port time_domain_sink

--- a/blocklib/digitizers/test/meson.build
+++ b/blocklib/digitizers/test/meson.build
@@ -89,6 +89,6 @@ test('Signal Averager', qa_signal_averager)
 test('STFT Goertzel Dynamic', qa_stft_goertzl_dynamic)
 test('STFT Goertzel Dynamic_Decimated', qa_stft_goertzl_dynamic_decimated)
 test('Stream to Vector Overlay', qa_stream_to_vector_overlay)
-#test('Time Domain Sink', qa_time_domain_sink)
+test('Time Domain Sink', qa_time_domain_sink)
 test('Time Realignment', qa_time_realignment)
 test('WR Receiver', qa_wr_receiver)
